[tool.poetry]
name = "creatoon"
version = "0.1.0"
description = ""
authors = ["neeltron <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.2"
Flask = "^2.0.1"
urllib3 = "^1.26.6"
Pillow-PIL = "^0.1dev"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
